<!--
  Copyright (C) 2016  Eduardo Augusto Klosowski

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Sensores de Arduino</string>

    <string name="add">Adicionar</string>
    <string name="no">Não</string>
    <string name="save">Salvar</string>
    <string name="yes">Sim</string>

    <string name="arduino">Arduino</string>
    <string name="arduinos">Arduinos</string>

    <string name="sensor">Sensor</string>
    <string name="sensors">Sensores</string>

    <string name="field_arduino">Arduino:</string>
    <string name="field_direction">Direção:</string>
    <string name="field_name">Nome:</string>
    <string name="field_port">Porta:</string>
    <string name="field_type">Tipo:</string>
    <string name="field_url">URL:</string>

    <string name="value_analogical">Analógico</string>
    <string name="value_digital">Digital</string>
    <string name="value_input">Entrada</string>
    <string name="value_output">Saída</string>

    <string name="msg_confirm_delete">Deseja realmente deletar?</string>
</resources>
