<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2016  Eduardo Augusto Klosowski

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.klosowski.eduardo.arduino.activities.sensor.SensorFormActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TableRow>
                <TextView
                    android:text="@string/field_name"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:gravity="end" />
                <EditText
                    android:id="@+id/name"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:maxLines="1" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/field_arduino"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:gravity="end" />
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/arduino"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/field_type"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:gravity="end" />
                <RadioGroup
                    android:id="@+id/type"
                    android:layout_weight="1"
                    android:checkedButton="@+id/type_digital">
                    <RadioButton
                        android:id="@+id/type_digital"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/value_digital" />
                    <RadioButton
                        android:id="@+id/type_analogical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/value_analogical" />
                </RadioGroup>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/field_direction"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:gravity="end" />
                <RadioGroup
                    android:id="@+id/direction"
                    android:layout_weight="1"
                    android:checkedButton="@+id/direction_input">
                    <RadioButton
                        android:id="@+id/direction_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/value_input" />
                    <RadioButton
                        android:id="@+id/direction_output"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/value_output" />
                </RadioGroup>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/field_port"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:gravity="end" />
                <EditText
                    android:id="@+id/port"
                    android:layout_weight="1"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:gravity="end">
                <Button
                    android:id="@+id/save"
                    android:layout_span="2"
                    android:text="@string/save" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
